# hoarder_client

./: README.md  hoarder_api.md  hoarder_api_documentation.md  package-lock.json  package.json  prd.md  vite.config.js
src/: api.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: api-key.json  default.json
src-tauri/permissions/: api_key.toml
src-tauri/src/: lib.rs  logger.rs  main.rs
src/api/: api.js  client.js
src/components/: BookmarkCard.js  BookmarkList.js  Modal.js  SearchBar.js  Toast.js
src/state/: store.js
src/utils/: helpers.js
tauri_docs/: documentation.md
tauri_docs/learn/: index.mdx
tauri_docs/plugin/: file-system.mdx
